syntax = "proto3";

package tariff;

service TariffService {
    rpc FindOne (ID) returns (SingleData) {}
    rpc FindAll (Empty) returns (MultipleData) {}
    rpc Create (CreateDto) returns (SingleData) {}
    rpc Update (UpdateDto) returns (SingleData){}
    rpc Remove (ID) returns (SingleData){}
}

//paramater
message ID {
    int32 id = 1;
}

message Empty {}

//dto


message CreateDto{
    string name = 1;
    int32 park = 2;
    int32 price = 3;
    string time = 4;
} 

message UpdateDto{
   int32 id = 1;
   CreateDto dto = 2;
} 


//return data

message MultipleData {
    string message = 1;
    int32 statusCode = 2;
    repeated Tariff data = 3;
    Error error = 4;
}

message SingleData {
    string message = 1;
    int32 statusCode = 2;
    Tariff data = 3;
    Error error = 4;
}


//entity
message Tariff {
    int32 id = 1;
    string name = 2;
    int32 park = 3;
    int32 price = 4;
    string time = 5;
    string createdAt = 6;
    string lastEditedAt = 7;
}


//Error
message Error {
    string errorMessage = 1;
    int32 errorCode = 2;
}